icon_id column in summoner table, update of /profile endpoint
